kubernetes/mysql/deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app-deployment
  namespace: application
spec:
  selector:
    matchLabels:
      app: java-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  replicas: 2
  template:
    metadata:
      labels:
        app: java-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        fsGroup: 1001
      serviceAccountName: application-ns-sa
      containers:
      - name: java-app
        image: swarnava28/java-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
          failureThreshold: 3
