kubernetes/mysql/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: database
  labels:
    app: mysql
    tier: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
      tier: database
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: OrderedReady
  template:
    metadata:
      labels:
        app: mysql
        tier: database
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
      - image: mysql:5.7
        args:
        - "--ignore-db-dir=lost+found"
        - "--default-authentication-plugin=mysql_native_password"
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
        readinessProbe:
          exec:
            command:
            - sh
            - "-c"
            - "mysqladmin ping -h localhost"
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          exec:
            command:
            - sh
            - "-c"
            - "mysqladmin ping -h localhost"
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
