kubernetes/mysql/service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql # DNS name
  namespace: database
  labels:
    app: mysql
    tier: database
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    # mysql Pod Should contain same labels
    app: mysql
    tier: database
  # clusterIP: None # We Use DNS, Thus ClusterIP is not relevant
